# doom-cli

./: Cargo.toml  README.md  doom_cli.nimble  pyproject.toml  session.vim
.devcontainer/: devcontainer.json
playdoom/: __main__.py  config.py
src/: autoload.rs  cmd.rs  engine.rs  engine_manager.rs  error.rs  job.rs  main.rs  playdoom.nim  pwads.rs  render.rs  score.rs  search.rs  util.rs
src/doomCli/: args.nim  config.nim  exampleConfig.ini  exampleConfig.kdl  optionsExt.nim  version.nim
src/engine_manager/: alias_map.rs
