[package]
name = "playdoom"
version = "0.6.2"
authors = ["kyle.coffey <kyle.coffey@tamu.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "3.2.23"
itertools = "0.10.5"
lazy_static = "1.4.0"
dirs = "4.0.0"
once_cell = "1.16.0"
walkdir = "2.3.2"
serde = { version = "1.0.147", features = ["derive"] }
anyhow = "1.0.66"
ctrlc = "3.2.3"
dialoguer = "0.10.2"
path-clean = "0.1.0"
indoc = "1.0.7"
thiserror = "1.0.37"
pretty_env_logger = "0.4.0"
log = "0.4.17"
tokio = { version = "1.21.2", features = ["full"] }
indicatif = "0.17.2"
ron = "0.8.0"
