[package]
name = "playdoom"
version = "0.7.3"
authors = ["Kyle Coffey <me@phytolizer.dev>"]
edition = "2021"

[dependencies]
clap = { version = "3.2.25", features = ["cargo"] }
itertools = "0.10.5"
lazy_static = "1.4.0"
dirs = "4.0.0"
once_cell = "1.18.0"
walkdir = "2.3.3"
serde = { version = "1.0.164", features = ["derive"] }
anyhow = "1.0.71"
ctrlc = "3.4.0"
dialoguer = "0.10.4"
indoc = "1.0.9"
thiserror = "1.0.40"
pretty_env_logger = "0.4.0"
log = "0.4.18"
tokio = { version = "1.28.2", features = ["full"] }
indicatif = "0.17.5"
ron = "0.8.0"
normpath = "1.1.1"
