[tool.poetry]
name = "doom-cli"
version = "0.1.0"
description = "Command-line Doom launcher"
authors = ["Kyle Coffey <kyle@kylecoffey.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
platformdirs = "^4.3.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
